2003-11-04  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/notepad.php, www/include/note.php: New files.  *
	www/forum/include/ForumHTML.class, www/pm/add_task.php,
	www/pm/mod_task.php, www/tracker/add.php, www/tracker/detail.php,
	www/tracker/index.php, www/tracker/mod.php: Patch #559 from
	Hidenari Miwa and Tsutomu Tominaga: add pop-up window providing a
	larger editing area for texts.  Thanks, guys!

	* www/tracker/reporting/index.php: Fix highlighted tab when
	viewing tracker reports (patch #565 from Francisco Gimeno).

2003-11-04 Tom Copeland  <tom@infoether.com>

	* www/survey/index.php:
	Implemented RFE [ #576 ] Survey title could be clickable

2003-10-21  Roland Mas  <99.roland.mas@aist.enst.fr>

	* www/pm/gantt.php: Exit with a (more) helpful message if the
	JPGraph package is not installed.

	* www/include/languages/French.tab: Couple of minor fixes.

	* www/docman/include/doc_utils.php: "All languages" in language
	selection dropdown menu is now * rather than 0.

	* www/docman/index.php: Taking that change into consideration, we
	now set $language_id to 0 if we get "*" as a CGI value.  This
	means we can distinguish between undefined $language_id and "all
	languages", so that selecting "All languages" in a docman really
	shows documents from all languages.

2003-10-18 Christian Bayle <bayle@debian.org>
	
	* Applied various patch
	#547: Fix syntax typo of mailing_lists_create.php (Hidenari Miwa)
	#554: skills_utils.php missing a double quote     (Mitch Murphy )
	#550: Mandatory login for gforge remastered       (Ramon van Alteren)
	#540: Changes for Project Summary and Admin pages (Mathieu Peltier)
	#546: Fix of mail by Developer Profile page.      (Hidenari Miwa)
	#545: Tracker i18n                                (Hidenari Miwa)
	#544: Document manager i18n                       (Hidenari Miwa)
	#542: Bookmark page link                          (Hidenari Miwa)
	#475: PluginManager show comments before HTML (Vicente J. Ruiz Jurado)
	